[package]
name = "hlscaptionfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
regex = "1.7"
log = "0.4"
env_logger = "0.10"
m3u8-rs = "5.0"
bytes = "1.4"